fix Log in Button responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="login-input">
                 <input id="log-in-email" name="email" class="input-mail" type="text" placeholder="E-mail" required autocomplete="username">
-                <div>
+                <div class="flex-end">
                     <input id="log-in-pw" name="password" class="input-key" type="password" placeholder="Password" required autocomplete="current-password">
                 <img onclick="showPW('log-in-pw')"  class="keyIMG" src="./img/lock-icon.png">
                 </div>
