fixed add subtask button

--- a/addtask/addtask-template.html
+++ b/addtask/addtask-template.html
@@ -82,7 +82,9 @@
                 <span><b>Subtasks</b></span>
                 <div class="subtask-input-button">
                 <input id="subtaskInput" type="text" placeholder="Add new subtask">
+                <div class="button-box">
                 <button class="addSubtask-button" onclick="addSubtask()" type="button"> <img src="../img/addSubtaskButton.png"></button>
+                </div>
                 </div>
                 <div id="subtaskContainer"></div>
             </div>
