fix add task layout

--- a/addtask/addtask.html
+++ b/addtask/addtask.html
@@ -32,7 +32,7 @@
 
     </div>
     
-    <div w3-include-html="../addtask/addtask-template.html"></div>
+    <div class="screen-container" w3-include-html="../addtask/addtask-template.html"></div>
 </div>
 
  <!-- TASK ADDED SUCESSSFULLY REPORT-->
